--- a/tutorialwebsite/style.css
+++ b/tutorialwebsite/style.css
@@ -30,3 +30,11 @@ header{
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
 }
+
+footer {
+    background-color: aliceblue;
+}
+
+footer li {
+    list-style:none
+}
